// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for applications 1`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "APP",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_coverage",
          "key": "new_coverage",
          "name": "New_coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "New_bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
/>
`;

exports[`should render correctly for applications 2`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "APP",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_coverage",
          "key": "new_coverage",
          "name": "New_coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "New_bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
/>
`;

exports[`should render correctly for projects 1`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_coverage",
          "key": "new_coverage",
          "name": "New_coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "New_bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
/>
`;

exports[`should render correctly for projects 2`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_coverage",
          "key": "new_coverage",
          "name": "New_coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "New_bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
/>
`;

exports[`should render correctly if branch is misconfigured: hide settings 1`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": false,
      "name": "own-reference",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
  period={
    Object {
      "date": undefined,
      "index": 0,
      "mode": "REFERENCE_BRANCH",
      "parameter": "own-reference",
    }
  }
/>
`;

exports[`should render correctly if branch is misconfigured: show settings 1`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": false,
      "name": "own-reference",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "configuration": Object {
        "showSettings": true,
      },
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
  period={
    Object {
      "date": undefined,
      "index": 0,
      "mode": "REFERENCE_BRANCH",
      "parameter": "own-reference",
    }
  }
/>
`;

exports[`should render correctly if the data is still loading 1`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  loading={true}
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_coverage",
          "key": "new_coverage",
          "name": "New_coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "New_bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
/>
`;

exports[`should render correctly if there is no coverage 1`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "New_bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
/>
`;

exports[`should render correctly if there is no new code measures 1`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/path",
      "query": Object {},
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
/>
`;

exports[`should render correctly when code scope is new code 1`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/dashboard",
      "query": Object {
        "code_scope": "new",
      },
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_coverage",
          "key": "new_coverage",
          "name": "New_coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "New_bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
/>
`;

exports[`should render correctly when code scope is overall code 1`] = `
<Memo(MeasuresPanel)
  branch={
    Object {
      "analysisDate": "2018-01-01",
      "excludedFromPurge": true,
      "isMain": true,
      "name": "master",
    }
  }
  component={
    Object {
      "breadcrumbs": Array [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": Object {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": Array [
        Object {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": Array [],
    }
  }
  location={
    Object {
      "action": "PUSH",
      "hash": "",
      "key": "key",
      "pathname": "/dashboard",
      "query": Object {
        "code_scope": "overall",
      },
      "search": "",
      "state": Object {},
    }
  }
  measures={
    Array [
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "coverage",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_coverage",
          "key": "new_coverage",
          "name": "New_coverage",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "bugs",
          "key": "bugs",
          "name": "Bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
      Object {
        "bestValue": true,
        "leak": "1",
        "metric": Object {
          "id": "new_bugs",
          "key": "new_bugs",
          "name": "New_bugs",
          "type": "PERCENT",
        },
        "period": Object {
          "bestValue": true,
          "index": 1,
          "value": "1.0",
        },
        "value": "1.0",
      },
    ]
  }
/>
`;
